--- a/EjercicioNegritaCursiva.html
+++ b/EjercicioNegritaCursiva.html
@@ -12,7 +12,9 @@
     <link rel="icon" sizes="64x64" href="./assets/icons/Lamborghini.png">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quia rem odio alias debitis, eveniet a quod, quaerat deserunt hic ullam aliquam numquam at enim, eos nobis minus sunt quae?
+    <h1></h1>
+    <p>Lorem <i>ipsum dolor sit amet consectetur</i> adipisicing elit. Porro quia rem <strong>odio alias debitis, eveniet a quod, quaerat deserunt hic</strong> ullam aliquam numquam at enim, eos nobis minus sunt quae?
+    <h6></h6>
     </p>
 </body>
 </html>
