--- a/EjemploTabla2.html
+++ b/EjemploTabla2.html
@@ -13,27 +13,47 @@
     <link rel="icon" sizes="64x64" href="">
 </head>
 <body>
+    <h1>Resultado de la búsqueda</h1>
     <table border="1">
+        <tr style="text-align: center;">
+            <td><b>Imagen</b></td>
+            <td><b>Datos</b></td>
+        </tr>
         <tr>
             <td>
-                <img src="./assets/icons/Lamborghini.png" lt="Lamborghini" width="1000px">
+                <img src="./assets/icons/Lamborghini.png" lt="Lamborghini" width="250px">
             </td>
             <td>
-                <a href="./assets/icons/Lamborghini.png">
-                    <b>VideoCámara - Alta
-                </a>
+                <a href="https://www.lamborghini.com/es-en/historia/aventador-svj#val-ht"><b>Lamborhini Aventador SVJ</b></a>
                 <br>
-                <a href="">
-
-                </a>
-                <s></s>
-                <b></b>
+                <a href="https://www.lamborghini.com/es-en/historia/aventador-svj#val-ht">Comprar</a>
+                <s>989.000 €</s>
+                <b>664.000 €</b>
             </td>
         </tr>
         <tr>
-            <td>Juan</td>
-            <td>Pérez</td>
-            <td>28</td>
+            <td>
+                <img src="./assets/icons/Ferrari.png" lt="Ferrari" width="250px">
+            </td>
+            <td>
+                <a href="https://www.ferrari.com/es-ES/auto/sf90-stradale"><b>Ferrari sf90 Stradale</b></a>
+                <br>
+                <a href="https://www.ferrari.com/es-ES/auto/sf90-stradale">Comprar</a>
+                <s>1.489.000 €</s>
+                <b>964.000 €</b>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="./assets/icons/BMW.png" lt="Ferrari" width="250px">
+            </td>
+            <td>
+                <a href="https://www.bmw.es/es/coches-bmw/m/bmw-4-series-m-models/caracteristicas-2024-g82.html"><b>BMW m4 Serie 4</b></a>
+                <br>
+                <a href="https://www.bmw.es/es/coches-bmw/m/bmw-4-series-m-models/caracteristicas-2024-g82.html">Comprar</a>
+                <s>489.000 €</s>
+                <b>264.000 €</b>
+            </td>
         </tr>
 </body>
 </html>
