--- a/FusionColumnas.html
+++ b/FusionColumnas.html
@@ -13,5 +13,25 @@
     <link rel="icon" sizes="64x64" href="">
 </head>
 <body>
+    <table border="1">
+        <tr style="text-align: center;">
+            <td colspan="3">A</td>
+            <td>B</td>
+        </tr>
+        <tr style="text-align: center;">
+            <td>C</td>
+            <td colspan="2">D</td>
+            <td>E</td>
+        </tr>
+        <tr style="text-align: center;">
+            <td colspan="4">F</td>
+        </tr>
+        <tr style="text-align: center;">
+            <td>G</td>
+            <td>H</td>
+            <td>I</td>
+            <td>J</td>
+        </tr>
+    </table>
 </body>
 </html>
