--- a/26Ejercicio.html
+++ b/26Ejercicio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio25</title>
+    <title>Ejercicio26</title>
     <meta name="description" content="Esto es la descripción de mi página web">
     <meta name="keywords" content="html, ejercicio, ejercicio1, ejemplo">
     <meta name="author" content="Xabi">
@@ -13,12 +13,10 @@
     <link rel="icon" sizes="64x64" href="">
 </head>
 <body>
-    <p><a href="http://">Enlace con el estilo por defecto</a></p>
-    <p><a href="http://" style="text-decoration: none;">Enlace sin subrayado</a></p>
-    <p><a href="http://" style="color: red;">Enlace de color rojo</a></p>
-    <p><a href="http://" style="font-size: 30px;"><b>Enlace muy importante</b></a></p>
-    <p><a href="http://" style="text-decoration: none;border-top: 2px solid blue;">Enlace con un estilo raro</b></a></p>
+    <p><a href="http://" style="display:inline-block; text-decoration:none;">Enlace numero 1</a></p>
+    <p><a href="http://">Enlace numero 2</a></p>
+    <p><a href="http://">Enlace numero 3</a></p>
+    <p><a href="http://">Enlace numero 4</a></p>
+    <p><a href="http://">Enlace numero 5</a></p>
 </body>
-</body>
-
 </html>
