--- a/27Ejercicio.html
+++ b/27Ejercicio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plantilla</title>
+    <title>Ejercicio27</title>
     <meta name="description" content="Esto es la descripción de mi página web">
     <meta name="keywords" content="html, ejercicio, ejercicio1, ejemplo">
     <meta name="author" content="Xabi">
@@ -15,11 +15,26 @@
 <body>
     <h1>REINO ANIMAL</h1>
     <ol>
-        <li>Artropodos</li>
-        <li>Moluscos</li>
-        <li>Equinodermos</li>
-        <li>Esponjas</li>
-        <li>Nematodos</li>
+        <li><a href="#Artropodos" tittle="Ir a la seccion de Artropodos">Artrópodos</a></li>
+        <li><a href="#Esquinodermos" tittle="Ir a la seccion de Esquinodermos">Esquinodermos</a></li>
+        <li><a href="#Moluscos" tittle="Ir a la seccion de Moluscos">Moluscos</a></li>
+        <li><a href="#Esponjas" tittle="Ir a la seccion de Esponjas">Esponjas</a></li>
+        <li><a href="#Nematodos" tittle="Ir a la seccion de Nematodos">Nematodos</a></li>
     </ol>
+    <h2 id="Artropodos">1. Artrópodos</h2>
+    <p>Exoesqueleto de quitina y patas articuladas.</p>
+    <img src="/AW-SMR-Xabier/assets/img/Artropodo.jpg" height="250px">
+    <h2 id="Equinodermos">2. Equinodermos</h2>
+    <p>Simetría pentarradiada, esqueleto externo de piezas calcáreas.</p>
+    <img src="/AW-SMR-Xabier/assets/img/Equinodermos.jpg" height="250px">
+    <h2 id="Moluscos">3. Moluscos</h2>
+    <p>Boca con rádula, pie muscular y manto alrededor de la concha.</p>
+    <img src="/AW-SMR-Xabier/assets/img/Moluscos.jpg" height="250px">
+    <h2 id="Esponjas">4. Esponjas</h2>
+    <p>Parazoos; sin simetría definida; cuerpo perforado por poros inhalantes.</p>
+    <img src="/AW-SMR-Xabier/assets/img/Esponjas.jpg" height="250px">
+    <h2 id="Nematodos">5. Nematodos</h2>
+    <p>Gusanos pseudocelomados de sección circular con cutícula quitinosa.</p>
+    <img src="/AW-SMR-Xabier/assets/img/Nematodos.jpg" height="250px">
 </body>
 </html>
